--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-/node_modules
+node_modules/
 yarn-debug.log*
 yarn-error.log*
-.atom
-.eclipse
-.idea
-.vim
-.vscode
+.atom/
+.eclipse/
+.idea/
+.vim/
+.vscode/
