--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cyntheon/prettier-config",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "A Prettier config",
   "homepage": "https://github.com/Cyntheon/prettier-config",
   "repository": {
@@ -19,6 +19,6 @@
     "prettier": "^2.4.1"
   },
   "peerDependencies": {
-    "prettier": "^8"
+    "prettier": "~2"
   }
 }
